# sudoku

./: CMakeLists.txt  README.md  SimpleSolver.cpp  SimpleSolver.hpp  main.cpp
src/: main.cpp
src/solvers/: BruteSolver.cpp  BruteSolver.hpp  CMakeLists.txt  SimpleSolver.cpp  SimpleSolver.hpp
